--- a/templates/lkStilist.html
+++ b/templates/lkStilist.html
@@ -56,7 +56,7 @@
             <div class="space-y-4">
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Разобрать гардероб</button>
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Составить капсулу</button>
-              <a href="/chatsCL"><button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Чат со стилистом</button></a>
+              <a href="/chats"><button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Чат со стилистом</button></a>
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Видеозвонок стилисту</button>
             </div>
           </div>
