--- a/templates/lkClientChatRoom.html
+++ b/templates/lkClientChatRoom.html
@@ -12,16 +12,16 @@
     <div class="container mx-auto p-4">
         {% for user in recipient %}
         {% if user.chat_id == chat_id %}
-        <h1 class="text-2xl font-bold mb-4">Chat with {{ user.name }}</h1>
+        <h1 class="text-2xl font-bold mb-4">Chat with {{ user.first_name }}</h1>
         {% endif %}
         {% endfor %}
-        <a href="/chat" onclick="leaveChat(event);" class="text-blue-500 hover:underline">Back to Chats</a>
+        <a href="/chatы" onclick="leaveChat(event);" class="text-blue-500 hover:underline">Back to Chats</a>
 
         <!-- Список сообщений -->
         <ul id="messages" class="mt-6 space-y-3 bg-white p-4 rounded-lg shadow overflow-y-auto h-96">
             {% for message in messages %}
             <li class="p-2 border-b border-gray-200">
-                <strong class="text-blue-600">{{ message.name }}:</strong> <span>{{ message.message }}</span>
+                <strong class="text-blue-600">{{ message.fisrt_name }}:</strong> <span>{{ message.message }}</span>
                 <div class="text-sm text-gray-500">{{ message.timestamp }}</div>
             </li>
             {% endfor %}
