--- a/templates/lkClientChatRoom.html
+++ b/templates/lkClientChatRoom.html
@@ -15,7 +15,7 @@
         <h1 class="text-2xl font-bold mb-4">Chat with {{ user.first_name }}</h1>
         {% endif %}
         {% endfor %}
-        <a href="/chatы" onclick="leaveChat(event);" class="text-blue-500 hover:underline">Back to Chats</a>
+        <a href="/chats" onclick="leaveChat(event);" class="text-blue-500 hover:underline">Back to Chats</a>
 
         <!-- Список сообщений -->
         <ul id="messages" class="mt-6 space-y-3 bg-white p-4 rounded-lg shadow overflow-y-auto h-96">
