--- a/templates/lkClientChat.html
+++ b/templates/lkClientChat.html
@@ -11,8 +11,13 @@
     <body class="bg-gray-100 min-h-screen">
         <div class="container mx-auto p-4">
             <h1 class="text-2xl font-bold mb-4">Welcome, {{ username }}</h1>
-            <a href="/logout" class="text-blue-500 hover:underline">Logout</a>
-    
+
+            {% if stylist == 1 %}
+            <a href="/lkST" class="text-blue-500 hover:underline">To profile</a>
+            {% endif %}
+            {% if stylist != 1 %}
+            <a href="/lkCL" class="text-blue-500 hover:underline">To profile</a>
+            {% endif %}
             <h2 class="text-xl font-semibold mt-6">Chats</h2>
             <ul class="space-y-2 mt-2">
                 {% if chats != None %}
