--- a/templates/lkClient.html
+++ b/templates/lkClient.html
@@ -44,7 +44,7 @@
               <div>
                 <h2 class="text-2xl font-bold">{{user_info.last_name}}</h2>
                 <p class="text-2xl">{{user_info.first_name}}</p>
-                <p class="text-gray-600 text-xl">16 лет</p>
+                <p class="text-gray-600 text-xl">{{ user_years }} лет</p>
                 <a href="/logout">logout</a>
               </div>
             </div>
