--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="./static/css/output.css">
       <link rel="stylesheet" href="./static/css/customStyles.css">
-      <title>Выбор пола</title>
+      <title>CHIC - Главная</title>
    </head>
    <body class="bg-gray-100 font-sans">
 
@@ -13,7 +13,7 @@
     <header class="flex items-center justify-between p-3 bg-customWhite shadow-md">
       <!-- Logo -->
       <div class="ml-20">
-        <a href="index.html">
+        <a href="/">
           <img src="./static/assets/img/svg/logoHead.svg" alt="">
         </a>
       </div>
